# BsaLib

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  compile.sh  docs.md  env  generate.sh
BsaLib/: CMakeLists.txt
BsaLib/src/: BsaLib.F90
BsaLib/src/CONSTANTS/: _CONSTANTS.F90
BsaLib/src/IO/: BsaIO.F90  BsaIOImpl.F90
BsaLib/src/bsa/: BsaLibImpl.F90
BsaLib/src/bsa/classic/: functions.F90
BsaLib/src/bsa/data/: BsaLibData.F90  BsaLibDataImpl.F90
BsaLib/src/bsa/functions/: functions.F90  functionsImpl.F90
BsaLib/src/bsa/meshing/: BsaMesherImpl.F90  functions.F90
BsaLib/src/bsa/meshing/point/: MPoint.F90
BsaLib/src/bsa/meshing/policy/: MPolicy.F90
BsaLib/src/bsa/meshing/zones/: M2DPolygZone.F90  MRectZone.F90  MRectZoneImpl.F90  MTriangZone.F90  MTriangZoneImpl.F90  MZone.F90  _shared_poly2d.fi
BsaLib/src/include/: iundump.h  meshing.h
BsaLib/src/structure/: StructureImpl.F90
BsaLib/src/timing/: Timer.F90
BsaLib/src/utils/: utility.F90
app/: bsa.F90
bsa/: CMakeLists.txt  bsa.F90
src/: BsaLib.F90
src/IO/: BsaIO.F90
src/bsa/: BsaLibImpl.F90
src/bsa/data/: BsaLibData.F90
src/bsa/meshing/policy/: MPolicy.F90
src/bsa/meshing/zones/: _shared_poly2d.fi
tests/: .gitignore
tests/001/: bsa.bsadata  bsa.extdata
tests/004/: bsa.bsadata
